[gd_scene load_steps=3 format=3 uid="uid://p5mjswomuwe4"]

[ext_resource type="Theme" uid="uid://bmq24vi5uw0mq" path="res://assets/themes/default_theme.tres" id="1_3dwqd"]
[ext_resource type="Script" uid="uid://48rac17qtkka" path="res://scripts/singe_scripts/color_switch_menu.gd" id="1_dpnoj"]

[node name="color_switch_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpnoj")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3dwqd")
columns = 2

[node name="blue" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Blue"

[node name="red" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Red"

[node name="green" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Green"

[node name="yellow" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Yellow"

[connection signal="pressed" from="GridContainer/blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="GridContainer/red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="GridContainer/green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="GridContainer/yellow" to="." method="_on_yellow_pressed"]
